# monadical

./: .gitignore  LICENSE  README.md  SKILLS.md  VALIDATION.md  __init__.py  convert.py  example.txt  pyproject.toml
option/: __init__.py  collections.py  combinators.py  env.py  io.py  option.py  parse.py  path.py
result/: __init__.py  combinators.py  env.py  http.py  io.py  parse.py  path.py  result.py
src/dscoe_func/: __init__.py
src/dscoe_func/option/: __init__.py  combinators.py  env.py  io.py  option.py  parse.py  path.py
src/dscoe_func/result/: __init__.py  combinators.py  env.py  http.py  io.py  parse.py  path.py  result.py
src/dscoe_func/state/: __init__.py  combinators.py  state.py
src/dscoe_func/validation/: __init__.py  combinators.py  env.py  io.py  parse.py  path.py  validation.py
state/: combinators.py  state.py
tests/: conftest.py  test_convert.py
tests/option/: test_combinators.py  test_env.py  test_io.py  test_option.py  test_parse.py  test_path.py
validation/: __init__.py  combinators.py  env.py  io.py  parse.py  path.py  validation.py
