[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "monadical"
version = "0.1.0"
description = "Monadic types for Python"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["monadical", "monadical.option", "monadical.result", "monadical.state", "monadical.validation"]

[tool.setuptools.package-dir]
"monadical" = "."

[tool.setuptools.package-data]
monadical = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]
